# latency_check

./: CMakeLists.txt  README.md
src/display/: CMakeLists.txt  display.cc  display.hh  gl_objects.cc  gl_objects.hh
src/frontend/: CMakeLists.txt  real-webcam.cc  stagecast-video-client.cc  ws-camera-server.cc
src/input/: camera.cc  camera.hh  frame_input.hh  jpeg.cc  jpeg.hh
src/util/: chunk.hh  exception.hh  file_descriptor.hh  mmap_region.cc  mmap_region.hh  raster.cc  raster.hh  raster_handle.cc  raster_handle.hh  safe_array.hh  ssim.cc  ssim.hh  stats_printer.hh
src/video/: camera.cc  camera.hh  jpeg.cc  jpeg.hh  mp4writer.cc  raster.hh  scale.hh  video_source.cc  videoserver.cc  videoserver.hh  vsclient.cc
src/web/: camera2.js
